@@ -6,7 +6,7 @@ Spring changelog
 Major:
  - Add LuaMenu - an unsynced stripped down Lua environment that starts before the game is loaded and persists through reload
    this environment receives the Draw{Genesis,Screen,ScreenPost} callins as well as
-   a special AllowDraw FPS regulator which enables these if true is returned from it
+   a special AllowDraw FPS limiter which enables these if true is returned from it
    (otherwise they are called once every 30 seconds)
  ! make GL3.0 the minimum required OpenGL version; Intel G45's and other relics are now banned
    (any driver that claims support for this *and* shaders is allowed to run Spring unimpeded)
@@ -89,6 +89,7 @@ Sim:
  - EMGCannon now obeys flightTime override (patch by Sprunk)
  - change a weapon reaiming-tolerance constant from 20 radians to 20 degrees (patch by Sprunk)
  - experiment with larger medium-resolution PFS blocksize (16*SQUARE_SIZE vs 8*SQUARE_SIZE)
+ - bump the default unloadSpread multiplier from 1 to 5
 
 Lua:
  ! Undeprecate {unit,feature}def.modelname and add .modeltype and .modelpath to
@@ -311,6 +312,7 @@ Bugfixes:
  - fix #5339 (crash when placing a geothermal)
  - fix #5338 (grid-patterns in unsynced heightmap)    
  - fix #5644 (send BuggerOff notes from opened-but-blocked factories again)
+ - fix #4745 (broken transport-unloading with non-zero unloadSpread)
 
 
 
